[tool.poetry]
name = "ml-pipeline-e2e"
version = "0.1.0"
description = "repository for learning book building end to end machine learning"
authors = ["sanggusti <gustiowinata0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
